--- a/login_signup/login.html
+++ b/login_signup/login.html
@@ -15,9 +15,10 @@
         <input type="text" name="username" id="username_login" />
         <label for="password">Password:</label>
         <input type="text" name="password" id="password_login" />
-        <button>Login</button>
+        <button type="button" onclick="login();">Login</button>
         <a href="./signup.html">Sign Up</a>
       </form>
     </div>
   </body>
+  <script src="./login.js"></script>
 </html>
