--- a/login_signup/signup.html
+++ b/login_signup/signup.html
@@ -15,8 +15,9 @@
         <input type="text" name="username" id="username_signup" />
         <label for="password">Password:</label>
         <input type="text" name="password" id="password_signup" />
-        <button>Sign Up</button>
+        <button type="button" onclick="signUp()">Sign Up</button>
       </form>
     </div>
   </body>
+  <script src="./signup.js"></script>
 </html>
