started on create card screen

--- a/buyer_dashboard/buyer.html
+++ b/buyer_dashboard/buyer.html
@@ -26,9 +26,11 @@
       </div>
     </div>
     <div id="profile_options_menu">
-      <div id="view_profile" class="menu_options">View Profile</div>
-      <div id="seller_dashboard" class="menu_options">Seller Dashboard</div>
-      <div id="view_cart" class="menu_options">View Cart</div>
+      <div id="view_profile" class="menu_options"><h5>View Profile</h5></div>
+      <div id="seller_dashboard" class="menu_options">
+        <h5>Seller Dashboard</h5>
+      </div>
+      <div id="view_cart" class="menu_options"><h5>View Cart</h5></div>
     </div>
     <div id="product_grid">
       <div class="product_card" id="card_1">
