made card preview in create card page

--- a/buyer_dashboard/buyer.html
+++ b/buyer_dashboard/buyer.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <link rel="stylesheet" href="./create_card.css" />
     <title>Buyer Dashboard</title>
   </head>
   <body>
@@ -27,8 +28,8 @@
     </div>
     <div id="profile_options_menu">
       <div id="view_profile" class="menu_options"><h5>View Profile</h5></div>
-      <div id="seller_dashboard" class="menu_options">
-        <h5>Seller Dashboard</h5>
+      <div id="create_card" class="menu_options" onclick="goToCreateCard()">
+        <h5>Create Product Card</h5>
       </div>
       <div id="view_cart" class="menu_options"><h5>View Cart</h5></div>
     </div>
